--- a/rsbc-ride-kafka-mockconsumer/src/main/resources/application.properties
+++ b/rsbc-ride-kafka-mockconsumer/src/main/resources/application.properties
@@ -17,7 +17,7 @@ mp.messaging.incoming.incoming-channel.health-enabled=true
 mp.messaging.incoming.incoming-channel.health-readiness-enabled=true
 
 # Configuring the application that consumes the messages
-endpointURL.consumer_application_mock=http://jh-etk-mocksvc${ENV_SUFFIX:-dev}.apps.silver.devops.gov.bc.ca/mocksvc/v3
+endpointURL.consumer_application_mock=${MOCKSVC_URL}
 
 # What to do when there is no initial offset in Kafka. Accepted values are earliest, latest and none
 mp.messaging.incoming.incoming-channel.auto.offset.reset=latest
