Increase the maximum Java heap to be used during the native image generation to 4g

--- a/rsbc-ride-kafka-mockproducer/src/main/docker/Dockerfile.multistage
+++ b/rsbc-ride-kafka-mockproducer/src/main/docker/Dockerfile.multistage
@@ -15,7 +15,7 @@ RUN [ "echo" , "src copied" ]
 USER root
 RUN chown -R quarkus /usr/src/app
 USER quarkus
-RUN mvn -f /usr/src/app/pom.xml -Pnative clean package
+RUN mvn -f /usr/src/app/pom.xml -Pnative -Dquarkus.native.native-image-xmx=4g clean package
 RUN [ "echo" , "mvn native build done" ]
 
 
