--- a/tekton/pipeline/tekton-pipeline-ride-use-pull-request-task.yaml
+++ b/tekton/pipeline/tekton-pipeline-ride-use-pull-request-task.yaml
@@ -1,18 +1,29 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: ride-build-and-deploy
+  name: ride-build-and-deploy-temp-3
 spec:
   workspaces:
   - name: shared-workspace
   params:
-  - name: git-url
+  - name: pr-number
+    description: Number of the pull request.
     type: string
-    description: url of the git repo for the code of deployment
-  - name: git-revision
+  - name: pr-mode
+    description: If "download", the state of the pull request at `url` will be fetched. If "upload" then the pull request at `url` will be updated.
     type: string
-    description: revision to be used from repo of the code for deployment
-    default: "master"
+  - name: pr-url
+    description: The URL of the Pull Reuqest, e.g. `https://github.com/bobcatfish/catservice/pull/16`
+    type: string
+  - name: provider
+    description: 'The type of SCM system, currently `github` or `gitlab`'
+    type: string
+  - name: secret-key-ref
+    description: The name of an opaque secret containing a key called "token" with a base64 encoded SCM token
+    type: string
+  - name: insecure-skip-tls-verify
+    description: 'If "true", certificate validation will be disabled'
+    type: string
   - name: IMAGE-MOCKPRODUCER
     type: string
     description: image for mockproducer to be build from the code
@@ -38,29 +49,22 @@ spec:
   tasks:
   - name: fetch-repository
     taskRef:
-      name: git-clone
+      name: pull-request
       kind: ClusterTask
     workspaces:
     - name: output
       workspace: shared-workspace
     params:
     - name: url
-      value: $(params.git-url)
-    - name: subdirectory
-      value: ""
-    - name: deleteExisting
-      value: "true"
-    - name: revision
-      value: $(params.git-revision)
-  - name: generate-id
-    runAfter:
-    - fetch-repository
-    taskRef:
-      kind: Task
-      name: t-generate-id
-    workspaces:
-    - name: source
-      workspace: shared-workspace
+      value: $(params.pr-url)
+    - name: mode
+      value: $(params.pr-mode)
+    - name: provider
+      value: $(params.provider)
+    - name: secret-key-ref
+      value: $(params.secret-key-ref)
+    - name: insecure-skip-tls-verify
+      value: $(params.insecure-skip-tls-verify)
   - name: build-image-for-mockproducer
     taskRef:
       name: t-buildah-with-resource-setting
@@ -68,7 +72,7 @@ spec:
     - name: IMAGE
       value: $(params.IMAGE-MOCKPRODUCER)
     - name: IMAGE_TAG
-      value: $(tasks.generate-id.results.short-commit)
+      value: $(params.pr-number)
     - name: DOCKERFILE
       value: $(params.DOCKERFILE-MOCKPRODUCER)
     - name: CONTEXT
@@ -79,7 +83,7 @@ spec:
     - name: source
       workspace: shared-workspace
     runAfter:
-    - generate-id
+    - fetch-repository
   - name: build-image-for-mockconsumer
     taskRef:
       name: t-buildah-with-resource-setting
@@ -87,7 +91,7 @@ spec:
     - name: IMAGE
       value: $(params.IMAGE-MOCKCONSUMER)
     - name: IMAGE_TAG
-      value: $(tasks.generate-id.results.short-commit)
+      value: $(params.pr-number)
     - name: DOCKERFILE
       value: $(params.DOCKERFILE-MOCKCONSUMER)
     - name: CONTEXT
@@ -98,4 +102,4 @@ spec:
     - name: source
       workspace: shared-workspace
     runAfter:
-    - generate-id
+    - fetch-repository
