--- a/tekton/triggers/ride-build-push-image-trigger-eventlistener.yaml
+++ b/tekton/triggers/ride-build-push-image-trigger-eventlistener.yaml
@@ -11,7 +11,7 @@ spec:
     - name: github-listener
       bindings:
         - kind: TriggerBinding
-          ref: pipeline-templates
+          ref: ride-build-push-image-trigger
       interceptors:
         - github:
             eventTypes:
