--- a/tekton/triggers/ride-build-push-image-trigger-triggertemplate.yaml
+++ b/tekton/triggers/ride-build-push-image-trigger-triggertemplate.yaml
@@ -4,78 +4,58 @@ metadata:
   name: ride-build-push-image-trigger
 spec:
   params:
-  - name: deployment-name
-    type: string
-    description: name of the deployment to be patched
   - name: git-url
-    type: string
-    description: url of the git repo for the code of deployment
+    description: url of the git repo for the code to be built
   - name: git-revision
-    type: string
-    description: revision to be used from repo of the code for deployment
-    default: "master"
+    description: revision to be used from repo of the code to be built
+    default: "download"
   - name: IMAGE-MOCKPRODUCER
-    type: string
     description: image for mockproducer to be build from the code
   - name: DOCKERFILE-MOCKPRODUCER
-    type: string
     description: Path to the Dockerfile to build mockproducer
   - name: CONTEXT-MOCKPRODUCER
-    type: string
     description: Path to the mockproducer directory to use as context
   - name: IMAGE-MOCKCONSUMER
-    type: string
     description: image of mockconsumer to be build from the code
   - name: DOCKERFILE-MOCKCONSUMER
-    type: string
     description: Path to the Dockerfile to build mockconsumer
   - name: CONTEXT-MOCKCONSUMER
-    type: string
     description: Path to the mockconsumer directory to use as context
   - name: IMAGE_REGISTRY
-    type: string
     description: The Root url of the image registry.
     default: docker.io
   resourcetemplates:
-    - apiVersion: tekton.dev/v1beta1
-      kind: PipelineRun
-      spec:
-        params:
-          - name: deployment-name
-            value: $(tt.params.deployment-name)
-          - name: git-url
-            value: $(tt.params.git-url)
-          - name: git-revision
-            value: $(tt.params.git-revision)
-          - name: IMAGE-MOCKPRODUCER
-            value: $(tt.params.IMAGE-MOCKPRODUCER)
-          - name: DOCKERFILE-MOCKPRODUCER
-            value: $(tt.params.DOCKERFILE-MOCKPRODUCER)
-          - name: CONTEXT-MOCKPRODUCER
-            value: $(tt.params.CONTEXT-MOCKPRODUCER)
-          - name: IMAGE-MOCKCONSUMER
-            value: $(tt.params.IMAGE-MOCKCONSUMER)
-          - name: DOCKERFILE-MOCKCONSUMER
-            value: $(tt.params.DOCKERFILE-MOCKCONSUMER)
-          - name: CONTEXT-MOCKCONSUMER
-            value: $(tt.params.CONTEXT-MOCKCONSUMER)
-          - name: IMAGE_REGISTRY
-            value: $(tt.params.IMAGE_REGISTRY)
-        pipelineRef:
-          name: ride-build-and-deploy
+  - apiVersion: tekton.dev/v1beta1
+    kind: PipelineRun
+    spec:
+      params:
+      - name: git-url
+        value: $(tt.params.git-url)
+      - name: git-revision
+        value: $(tt.params.git-revision)
+      - name: IMAGE-MOCKPRODUCER
+        value: $(tt.params.IMAGE-MOCKPRODUCER)
+      - name: DOCKERFILE-MOCKPRODUCER
+        value: $(tt.params.DOCKERFILE-MOCKPRODUCER)
+      - name: CONTEXT-MOCKPRODUCER
+        value: $(tt.params.CONTEXT-MOCKPRODUCER)
+      - name: IMAGE-MOCKCONSUMER
+        value: $(tt.params.IMAGE-MOCKCONSUMER)
+      - name: DOCKERFILE-MOCKCONSUMER
+        value: $(tt.params.DOCKERFILE-MOCKCONSUMER)
+      - name: CONTEXT-MOCKCONSUMER
+        value: $(tt.params.CONTEXT-MOCKCONSUMER)
+      - name: IMAGE_REGISTRY
+        value: $(tt.params.IMAGE_REGISTRY)
+      pipelineRef:
+        name: ride-build-and-deploy
         serviceAccountName: service-tekton-triggers-sa
         workspaces:
-          - name: shared-workspace
-            volumeClaimTemplate:
-              spec:
-                accessModes:
-                  - ReadWriteOnce
-                resources:
-                  requests:
-                    storage: 500Mi
-          - name: ssh-creds
-            secret:
-              secretName: ssh-key-path
-          - name: docker-config
-            secret:
-              secretName: docker-config-path
+        - name: shared-workspace
+          volumeClaimTemplate:
+            spec:
+              accessModes:
+              - ReadWriteOnce
+              resources:
+                requests:
+                  storage: 500Mi
