--- a/tekton/triggers/ingress.yaml
+++ b/tekton/triggers/ingress.yaml
@@ -7,8 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-    - host: console.apps.silver.devops.gov.bc.ca
-      http:
+    - http:
         paths:
           - path: /github-hooks
             pathType: Exact
