--- a/tekton/pipeline/tekton-pipeline-run-ride-update-image-use-github-cli.yaml
+++ b/tekton/pipeline/tekton-pipeline-run-ride-update-image-use-github-cli.yaml
@@ -13,48 +13,13 @@ spec:
     - name: subdirectory-destination
       value: ""
     - name: pr-number
-      value: '3'
+      value: 'pr-5'
     - name: new-image-tag
       value: 5644s
-    - name: yq-command
-      value: |
-        set -e
-        pwd
-        ls
-        cd ./jag-rsbc-ride/overlays/pr/template/
-        pwd
-      
-        for var in *-template.yaml
-        do
-          sed "s/PR-TO-BE-REPLACED/pr-4/g" \
-          "$var" \
-          > "../${var%-*}.yaml"
-        done
-
-        pwd
-        cd ..
-        /usr/bin/yq eval -i '.images[].newTag = "5644s"' "kustomization.yaml"
-        cat template/kustomization-template.yaml
-        cat kustomization.yaml
-    - name: GIT_SCRIPT
-      value: |
-        git init
-        git remote add origin https://github.com/bcgov-c/tenant-gitops-be5301
-        git pull origin pr
-        git checkout pr
-        git status   
-        cat $(workspaces.input.path)/jag-rsbc-ride/overlays/pr/kustomization.yaml
-        cp -r $(workspaces.input.path)/jag-rsbc-ride/overlays/pr/* $(workspaces.source.path)/jag-rsbc-ride/overlays/pr/
-        cat $(workspaces.source.path)/jag-rsbc-ride/overlays/pr/kustomization.yaml
-        
-        git config user.email "ellovechat@yahoo.ca"
-        git config user.name "echo-rsbc-ride-sa"
-
-        ls -al $(workspaces.source.path)/jag-rsbc-ride/overlays/pr
-        
-        git add .
-        git commit -m "a test comments"
-        git push origin pr
+    - name: GIT_USER_NAME_DESTINATION
+      value: "echo-rsbc-ride-sa"
+    - name: GIT_USER_EMAIL_DESTINATION
+      value: "ellovechat@yahoo.ca"
   pipelineRef:
     name: ride-build-update-image-use-github-cli
   serviceAccountName: github-bot
