Added when condition for create-pr-to-master-branch step

--- a/tekton/pipeline/tekton-pipeline-ride.yaml
+++ b/tekton/pipeline/tekton-pipeline-ride.yaml
@@ -214,6 +214,10 @@ spec:
     runAfter:
     - yq-replace-image-tag
   - name: create-pr-to-master-branch
+    when:
+      - input: "$(params.pr-destination)"
+        operator: in
+        values: ["main"]
     taskRef:
       name: t-github-open-pr
     params:
